<resources>
    <string name="app_name">Simón dice app</string>
    <string name="bt_inicio">Inicio</string>
    <string name="bt_note_do">do</string>
    <string name="bt_note_re">re</string>
    <string name="bt_note_mi">mi</string>
    <string name="bt_note_fa">fa</string>
    <string name="bt_note_sol">sol</string>
    <string name="bt_note_la">la</string>
    <string name="bt_note_si">si</string>
    <string name="bt_note_do_m">Do M</string>
</resources>