<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_notes_4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_note_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_do"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_sol"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_si"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_do_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_do_m"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_mi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_mi"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_re"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_fa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_fa"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_note_la"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_note_la"
        app:backgroundTint="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bt_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_inicio"
        app:backgroundTint="@color/material_on_primary_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        android:onClick="onClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>